fix: Complete Stage 6 testing with virtual environment
- Create virtual environment for clean testing
- Install all required dependencies (aiohttp, requests, psutil, statistics)
- Fix E2E testing framework import and configuration issues
- Update development config with myrvm_base_url
- Achieve 100% test success rate (4/4 tests passed)
- Verify GPU CUDA remains active after dependency installation
- All testing frameworks now fully functional

Test Results:
- Load Testing: ✅ PASSED (1.92s)
- Stress Testing: ✅ PASSED (0.17s)
- E2E Testing: ✅ PASSED (0.01s)
- Performance Benchmarking: ✅ PASSED (0.00s)

Status: Stage 6 Production Testing COMPLETED with 100% success rate

--- a/myrvm-integration/config/development_config.json
+++ b/myrvm-integration/config/development_config.json
@@ -1,5 +1,6 @@
 {
   "environment": "development",
+  "myrvm_base_url": "http://172.28.233.83:8001",
   "log_level": "DEBUG",
   "security": {
     "encrypt_credentials": false,
