feat: Implement Remote Access Services for MyRVM Platform Integration
- Add On-Demand Camera Manager with session management
- Add Remote Access Controller with Flask API endpoints
- Add HTML dashboard interface for remote control
- Add systemd service integration for auto-start
- Add installation and deployment scripts
- Add comprehensive configuration for remote access
- Test all API endpoints and integration workflows
- Add complete documentation for implementation

Features implemented:
✅ On-demand camera activation (Port 5000)
✅ Remote access controller (Port 5001)
✅ Session management with 1-hour timeout
✅ RVM status auto-change to maintenance
✅ API authentication with API keys
✅ Real-time dashboard interface
✅ Systemd service management
✅ Log rotation and monitoring
✅ Complete testing and validation

Ready for MyRVM Platform integration and production deployment.

--- a/myrvm-integration/config/development_config.json
+++ b/myrvm-integration/config/development_config.json
@@ -29,5 +29,19 @@
   "health_check_interval": 120.0,
   "capture_interval": 10.0,
   "batch_size": 1,
-  "max_processing_queue": 5
+  "max_processing_queue": 5,
+  "rvm_id": 1,
+  "use_tunnel": false,
+  "remote_access": {
+    "enabled": true,
+    "controller_port": 5001,
+    "host": "0.0.0.0",
+    "authentication_required": true,
+    "session_timeout": 3600,
+    "camera_script": "/home/my/test-cv-yolo11-sam2-camera/cv-camera/camera_sam2_integration.py",
+    "camera_port": 5000,
+    "auto_status_change": true,
+    "maintenance_status": "maintenance",
+    "restore_status": "active"
+  }
 }
